Bug 388094 - Alarm time exported incorrectly to iCalendar format (.ics) when time is greater than 7 days (or the equivalent in hours or minutes); r=mvl